Change check.sh to use the TLA+ tools wrapper scripts
Also update README to point at the tla-bit project.

Signed-off-by: Catalin Marinas <catalin.marinas@arm.com>